# example-api

./: .env  Cargo.toml  docker-compose.yml
migrations/2021-07-22-190843_create_users/: up.sql
migrations/2021-07-22-215853_create_posts/: up.sql
src/: db.rs  main.rs  schema.rs  util.rs
src/models/: mod.rs  users.rs
