[package]
name = "example_api"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
sha2 = "0.9.5"

[[bin]]
name = "api"
path = "src/main.rs"